--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My GitHub Actions Page</title>
   </head>
   <body>
-    <h1>Hello, GitHub Actions!</h1>
+    <p>Hello, GitHub Actions!</p>
   </body>
 </html>
